Edit Gert-Jan page en home

--- a/about-page.html
+++ b/about-page.html
@@ -11,9 +11,8 @@
     </style>
 </head>
 <body>
-    <h1>Just me</h1>
-    <img src="https://i.pinimg.com/280x280_RS/52/93/08/52930887eacd9cc31cbe3f6e409a4bdd.jpg">
-    <p>Cool right?</p>
-    <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">fun fact about me</a>
+    <h1>Gert-Jan</h1>
+    <p>Voor meer leuke feitjes, klik de afbeelding!</p>
+    <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"><img src="https://i.pinimg.com/280x280_RS/52/93/08/52930887eacd9cc31cbe3f6e409a4bdd.jpg"></a>
 </body>
 </html>
